--- a/index.html
+++ b/index.html
@@ -4,9 +4,132 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Apple</title>
-        <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        HI
+        <div class="container">
+            <nav class="global-nav">
+                <div class="global-nav__links">
+                    <a href="#" class="global-nav__item">Rooms</a>
+                    <a href="#" class="global-nav__item">Ideas</a>
+                    <a href="#" class="global-nav__item">Stores</a>
+                    <a href="#" class="global-nav__item">Contact</a>
+                </div>
+            </nav>
+            <nav class="local-nav">
+                <div class="local-nav__links">
+                    <a href="#" class="local-nav__item product-name"
+                        >AirPods Pro</a
+                    >
+                    <a href="#" class="local-nav__item">개요</a>
+                    <a href="#" class="local-nav__item">제품사항</a>
+                    <a href="#" class="local-nav__item">구입하기</a>
+                </div>
+            </nav>
+            <section id="scroll-section-1" class="scroll-section">
+                <h1 class="title">AirPods Pro</h1>
+                <div class="sticky-elem main-message">
+                    <p>온전히 빠져들게 하는<br />액티브 노이즈 캔슬링.</p>
+                </div>
+                <div class="sticky-elem main-message">
+                    <p>주변의 소리를 들려주는<br />주변음 허용 모드.</p>
+                </div>
+                <div class="sticky-elem main-message">
+                    <p>온종일 편안한 맞춤형 핏.</p>
+                </div>
+                <div class="sticky-elem main-message">
+                    <p>새롭게 귓가를<br />찾아온 매혹.</p>
+                </div>
+            </section>
+            <section id="scroll-section-2" class="scroll-section">
+                <p class="description">
+                    <strong>보통 스크롤 영역</strong>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Minus eius, totam corrupti obcaecati distinctio quasi omnis.
+                    Iusto aspernatur deserunt atque explicabo voluptates?
+                    Voluptas, aspernatur labore harum magnam modi blanditiis
+                    officiis, repellendus totam vitae corporis accusamus
+                    similique quae fugiat deleniti voluptatum saepe dignissimos
+                    rerum! Perspiciatis illum odit laboriosam delectus labore!
+                    Tempora molestias aliquid perspiciatis excepturi laudantium
+                    fuga at quas, iste dolorem, deleniti commodi tempore!
+                    Accusamus magnam sapiente, ipsa laborum voluptas unde iusto
+                    excepturi debitis rem voluptate ratione a delectus sequi
+                    dignissimos corporis deleniti suscipit expedita architecto
+                    porro. Laborum possimus qui repellendus perferendis magnam
+                    sapiente voluptatem eum, et nemo ipsa. Harum, quisquam? Quos
+                    ipsum ullam aspernatur minus iure cumque amet quam ratione!
+                    Facere ad non minima minus tempora perferendis vero porro,
+                    maxime impedit eligendi voluptate pariatur eaque quam
+                    accusantium libero qui animi cupiditate aspernatur at unde
+                    quibusdam! Repudiandae, possimus provident quisquam
+                    blanditiis debitis voluptatibus dolore! Ullam et voluptates
+                    ad at quam. Assumenda nemo minima dolorem, impedit corrupti,
+                    aperiam distinctio labore pariatur minus harum quod maiores
+                    eaque eius, earum vel quidem saepe cum quo numquam. Error,
+                    minus natus nesciunt saepe dolorem soluta suscipit assumenda
+                    adipisci eius pariatur laboriosam illo nam voluptates
+                    mollitia inventore optio ducimus maxime hic voluptatem
+                    voluptatibus aut laudantium? Delectus, fuga!
+                </p>
+            </section>
+            <section id="scroll-section-3" class="scroll-section">
+                <div class="sticky-elem main-message">
+                    <p>
+                        <small>편안한 착용감</small>
+                        귀와 하나 되다.
+                    </p>
+                </div>
+                <div class="sticky-elem desc-message">
+                    <p>
+                        편안한 착용감을 완성하는 디테일한 여러 구성 요소들,
+                        우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을
+                        거쳐 새로운 수준의 인이어 헤드폰, AirPods Pro를
+                        만들었습니다. 맞춤형 핏 디자인을 도입하여 액티브 노이즈
+                        캔슬링 기능에 맞는 탁월한 밀폐감을 선사합니다. 귀에 뭔가
+                        착용했다는 감각은 어느새 사라지고 오롯이 당신과 음악만
+                        남게 되죠.
+                    </p>
+                    <div class="pin"></div>
+                </div>
+                <div class="sticky-elem desc-message">
+                    <p>
+                        세 가지 크기로 제공되는 팁 중 하나를 골라 사용할 수
+                        있습니다. 부드럽고 유연한 실리콘 재질로, 본체에 꾹 눌러
+                        끼울 수 있죠. 또한 ‘이어팁 착용 테스트’를 통해 밀착
+                        정도를 확인할 수 있기 때문에 최적의 팁을 찾아 최고의
+                        사운드를 경험할 수 있습니다.
+                    </p>
+                    <div class="pin"></div>
+                </div>
+            </section>
+            <section id="scroll-section-4" class="scroll-section">
+                <p class="mid-message">
+                    <strong>Retina 디스플레이</strong>
+                    아이디어를 광활하게 펼칠<br />
+                    아름답고 광활한 작업 공간.
+                </p>
+                <p class="canvas-caption">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Libero saepe animi, id beatae quae ullam pariatur ratione
+                    nam fugiat architecto. Corrupti tempora facere alias
+                    blanditiis voluptatum eum commodi harum necessitatibus esse
+                    nostrum officiis dolorem, ratione sequi, atque iure numquam
+                    provident dolor maiores sunt nulla quas ipsam, vitae
+                    consequuntur. Pariatur autem fuga quidem atque non nesciunt
+                    illo cupiditate perspiciatis ex placeat quisquam quis amet,
+                    veritatis dolorum rem quam! Voluptate ad exercitationem nam
+                    asperiores quod excepturi iste modi, est, labore optio sit
+                    officiis nemo perferendis suscipit nobis cupiditate
+                    provident vel voluptatem quisquam. Molestias dolor nostrum,
+                    nam dolorum praesentium beatae voluptate ad mollitia!
+                </p>
+            </section>
+            <footer class="footer">
+                2020, Kangdyu
+            </footer>
+        </div>
+
+        <script src="src/main.js"></script>
     </body>
 </html>
