--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
                     <a href="#" class="local-nav__item">구입하기</a>
                 </div>
             </nav>
-            <section id="scroll-section-1" class="scroll-section">
+            <section id="scroll-section-0" class="scroll-section">
                 <h1 class="title">AirPods Pro</h1>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message a">
                     <p>온전히 빠져들게 하는<br />액티브 노이즈 캔슬링.</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message b">
                     <p>주변의 소리를 들려주는<br />주변음 허용 모드.</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message c">
                     <p>온종일 편안한 맞춤형 핏.</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message d">
                     <p>새롭게 귓가를<br />찾아온 매혹.</p>
                 </div>
             </section>
-            <section id="scroll-section-2" class="scroll-section">
+            <section id="scroll-section-1" class="scroll-section">
                 <p class="description">
                     <strong>보통 스크롤 영역</strong>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -73,14 +73,14 @@
                     voluptatibus aut laudantium? Delectus, fuga!
                 </p>
             </section>
-            <section id="scroll-section-3" class="scroll-section">
-                <div class="sticky-elem main-message">
+            <section id="scroll-section-2" class="scroll-section">
+                <div class="sticky-elem main-message a">
                     <p>
                         <small>편안한 착용감</small>
                         귀와 하나 되다.
                     </p>
                 </div>
-                <div class="sticky-elem desc-message">
+                <div class="sticky-elem desc-message b">
                     <p>
                         편안한 착용감을 완성하는 디테일한 여러 구성 요소들,
                         우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을
@@ -92,7 +92,7 @@
                     </p>
                     <div class="pin"></div>
                 </div>
-                <div class="sticky-elem desc-message">
+                <div class="sticky-elem desc-message c">
                     <p>
                         세 가지 크기로 제공되는 팁 중 하나를 골라 사용할 수
                         있습니다. 부드럽고 유연한 실리콘 재질로, 본체에 꾹 눌러
@@ -103,7 +103,7 @@
                     <div class="pin"></div>
                 </div>
             </section>
-            <section id="scroll-section-4" class="scroll-section">
+            <section id="scroll-section-3" class="scroll-section">
                 <p class="mid-message">
                     <strong>Retina 디스플레이</strong>
                     아이디어를 광활하게 펼칠<br />
@@ -125,9 +125,7 @@
                     nam dolorum praesentium beatae voluptate ad mollitia!
                 </p>
             </section>
-            <footer class="footer">
-                2020, Kangdyu
-            </footer>
+            <footer class="footer">2020, Kangdyu</footer>
         </div>
 
         <script src="src/main.js"></script>
