complete all features

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
                     아이디어를 광활하게 펼칠<br />
                     아름답고 광활한 작업 공간.
                 </p>
+                <canvas class="image-blend-canvas" width="1920" height="1080">
+                </canvas>
                 <p class="canvas-caption">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Libero saepe animi, id beatae quae ullam pariatur ratione
