--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <title>Apple</title>
         <link rel="stylesheet" href="css/style.css" />
     </head>
-    <body>
+    <body class="before-load">
+        <div class="loading">
+            <svg class="loading-circle">
+                <circle cx="50%" cy="50%" r="25"></circle>
+            </svg>
+        </div>
         <div class="container">
             <nav class="global-nav">
                 <div class="global-nav__links">
